--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            The 404 Blog
 description:      A blog for coolest 404 pages on the web.
 disqus_shortname:
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000/
+url:              http://404is.github.io/
 
 # Owner/author information
 owner:
